2009-12-04  James Hawkins  <jhawkins@chromium.org>

Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=32095
        Implement WebRegularExpression, a WebKit API for accessing
        WebCore::RegularExpression.

        * WebKit.gyp:
        * public/WebRegularExpression.h: Added.
        * public/WebTextCaseSensitivity.h: Added.
        (WebKit::):
        * src/AssertMatchingEnums.cpp:
        * src/WebRegularExpression.cpp: Added.
        (WebKit::WebRegularExpression::WebRegularExpression):
        (WebKit::WebRegularExpression::~WebRegularExpression):
        (WebKit::WebRegularExpression::match):

Canonical link: https://commits.webkit.org/43147@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51720 268f45cc-cd09-0410-ab3c-d52691b4dbfc